# libcaramelo

./: README.md  meson.build
build-aux/: io.github.diegoivan.libcaramelo.json
src/: ArrayQueue.vala  BidirectionalIterator.vala  Closures.vala  Collection.vala  HashMap.vala  HashSet.vala  Iterable.vala  Iterator.vala  LinkedList.vala  LinkedQueue.vala  List.vala  Map.vala  MapIterator.vala  Queue.vala  Set.vala  SingleLinkedList.vala  library.vala  meson.build
tests/: CollectionTest.vala  ListTest.vala  TestCase.vala  meson.build
